tests/parser/fail/v40_fail_product_equals.ep
# COMPILE_FAIL: Expected ID
type Legacy = {
    value: i64
}
